Fix collapsed border

--- a/src/renderer/components/FolderTree/style.pcss
+++ b/src/renderer/components/FolderTree/style.pcss
@@ -73,3 +73,9 @@
 .file-controls {
   margin-right: 4px;
 }
+
+.collapsed-tree {
+  box-shadow: var(--box-shadow);
+  border-right: var(--border);
+  padding-right: 8px;
+}
